Finish the footer, align all its elements, give it the right paddings and margins and fix the solid border next to the country.

--- a/css/style.css
+++ b/css/style.css
@@ -235,6 +235,7 @@ body.index  {
 
 .search_page_body {
     margin: auto;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -458,6 +459,7 @@ body.index  {
 .search_page_body .stats_results {
     font-family: google_sans;
     font-size: 14px;
+    width: max-content;
     color: #70757a;
     line-height: 15px;
     position: relative;
@@ -659,20 +661,73 @@ body.index  {
 }
 
 .search_page_body footer {
-    margin-left: 180px;
     width: fit-content;
+    background-color: #f2f2f2;
 }
 
 .search_page_body .upper_footer {
-    height: 55px;
+    height: 51px;
+    padding-left: 180px;
     width: fit-content;
     display: flex;
     flex-direction: row;
 }
 
 .search_page_body .bottom_footer {
-    height: 55px;
+    height: 53px;
+    padding-left: 180px;
+    border-top-style: solid;
+    border-width: 1px;
+    border-color: #dadce0;
     width: fit-content;
     display: flex;
     flex-direction: row;
+    align-items: center;
+}
+
+.search_page_body div.upper_footer a {
+    font-size: 14px;
+    color: rgba(0,0,0,.54);
+    text-decoration: none;
+    margin: auto 0px 11px 3px;
+}
+
+.search_page_body span.nowhere {
+    height: 10px;
+    width: 10px;
+    margin: auto 0px 10px 0px;
+    background-color: #70757a;
+    border-radius: 100%;
+}
+
+.search_page_body div.upper_footer p {
+    font-size: 14px;
+    color: rgba(0,0,0,.54);
+    margin: 24px 0px auto 0px;
+}
+
+.search_page_body p.pays_loc {
+    font-size: 15px !important;
+    padding: 3px 13px 7px 0px;
+    margin: 20px 0px 7px 0px !important;
+    border-right: solid 1px #dadce0;
+}
+
+.search_page_body div.bottom_footer a {
+    font-size: 14px;
+    color: rgba(0,0,0,.54);
+    text-decoration: none;
+    margin-right: 27px;
+    position: relative;
+    bottom: 6px;
+}
+
+.search_page_body span.nowhere {
+    margin: auto 3px 14px 16px;
+}
+
+.search_page_body a.but_where_though {
+    font-weight: bold;
+    color: #3c4043 !important;
+    margin-right: 3px !important;
 }
